# achiral_qw

./: .gitignore  README.md
Python/: Graph.py  README.md  article.py  bessel.py  collection.py  debug.py  istarmap.py  plotter.py  pyproject.toml  simulator.py  todo.txt  trends.py
Python/examples/: advanced.ipynb  banchifit.ipynb  collections.ipynb  graphs.ipynb  setup_cache.py  simulation.ipynb
Python/src/achiralqw/: analyze.py  article.py  bessel.py  collection.py  graph.py  istarmap.py  plotter.py  simulator.py  trends.py  work.py
Python/test/: article_fig.ipynb  banchifit.ipynb  debug.py  evo_test.ipynb  setup_cache.py  test_analyzer.py  test_collection.py  test_qwgraph.py  test_solver.py  test_sparse.ipynb  work.py
Python/tests/: P_first_fast.data  article_fig.ipynb  banchifit.ipynb  debug.py  setup_cache.py  test_analyzer.py  test_sparse.ipynb  test_stuff.ipynb
R/: Roadmap.txt  evoluzione.R  global.R  line_sub.R  lm.R  minmax.R  minmax_2.R  objMat.R  simulaMat.R  varie.R
R/NO_obj/: minmax.R  simulaMat.R
